# only-LLMwiki-comp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  FULL_SYSTEM_ANALYSIS_REPORT.md  INSTALL.md  OPTIMIZATION_REPORT.md  README.md  TEST_REPORT.md  TIMING_ANALYSIS_REPORT.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  方案计划文档_V2.1.md
backend/: ALEMBIC.md  alembic.ini  conftest.py
docs/: ARCHITECTURE_REDESIGN_PLAN.md  LLM-Wiki完整开发计划.md  OKF对齐演进路线图.md  sprint6-frontend-mvp-plan.md  产品化对标审计与开发计划.md  前端UIUX审计与优化方案.md  前端选型与P2完善计划.md  解析器对比评测.md  路线图实现偏差核对与下一步演进计划.md  项目可用性审计报告-2026-07-16.md  项目审计报告_M4M5_2026-07-13.md  项目审计报告与演进路线.md  项目能力全面审计报告_2026-07.md  项目能力全面审计报告_2026-07_v2.md
frontend/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: backup.sh  benchmark.py  restore.sh  verify_auth.py  verify_ha.py  verify_observability.py  verify_oidc.py  verify_p2_4_3.py  verify_p2_4_6.py  verify_p2_4_7.py  verify_p2_5_5.py  verify_p2_5_8.py  verify_s12_1_writeback.py  verify_s12_2_backlink.py  verify_s12_3_semantic_lint.py  verify_s12_4_sharding.py  verify_s13_1_saml.py  verify_s13_2_ldap.py  verify_s13_3_k8s.py  verify_s13_4_dockerfile.py  verify_s13_5_scale.py  verify_s14_1_router.py  verify_s14_2_loading_bar.py  verify_s14_3_unified_axios.py  verify_s14_4_remove_deps.py  verify_s14_5_test_coverage.py  verify_s14_6_e2e.py  verify_s15_1_tracing_spans.py  verify_s15_2_alert_router.py  (+14 more)
(+440 files in other folders)
